--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="name" required>
+		<br>
+		<label for="email">Email*</label>
+		<input type="email" id="email" required>
+		<br>
+		<label for="gender">Gender*</label>
+		<input type="radio" name="gender" value="male" required> Male
+		<input type="radio" name="gender" value="female" required> Female
+		<br>
+		<label for="laptop">Laptop Brands</label>
+		<select id="laptop">
+		<option value="apple">Apple</option>
+		<option value="asus">Asus</option>
+		<option value="hp">HP</option>
+		</select>
+		<br>
+		<label for="age">Age*</label>
+		<input type="number" id="age" required>
+		<br>
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob" required>
+		<br>
+		<label for="password">Password*</label>
+		<input type="password" id="password" required>
+		<br>
+		<label for="portfolio">Portfolio URL</label>
+		<input type="url" id="portfolio">
+		<br>
+		<input type="submit" value="Submit">
+	</form>
+	
+
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
